# qRandom

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
qrandom/: generators.py  qrandom.ipynb  qrandom.py
src/qrandom/: qrandom.py
tests/: test_qrandom.py
