[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculate word counts in a text file."
authors = [{ name="Alessandro Summer", email="summera@tcd.ie" },
           { name="Hannah Yelle", email="hannah.yelle@maine.edu" },
           { name="Leonard Logaric", email="logaricl@tcd.ie" },
           { name="Nathan Keenan", email="nakeenan@tcd.ie" },
           { name="Sam Gulinello", email="samgul@bu.edu" },
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.8"
covalent = "=v0.213.2-rc.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




